--- a/data/cards/10809984.yaml
+++ b/data/cards/10809984.yaml
@@ -8,7 +8,7 @@ name:
   it: Grande Ladro Spettrale
   pt: Grande Ladrão Fantasma
   ja: <ruby>世<rt>せい</rt></ruby><ruby>紀<rt>き</rt></ruby>の<ruby>大<rt>おお</rt></ruby><ruby>泥<rt>どろ</rt></ruby><ruby>棒<rt>ぼう</rt></ruby>
-  ja_romaji: Seiki no Oodorobō
+  ja_romaji: Seiki no Ōdorobō
   ko: 세기의 대도둑
   ko_rr:
   zh-TW:
