--- a/data/tcg-speed-skill/yugipedia585515.yaml
+++ b/data/tcg-speed-skill/yugipedia585515.yaml
@@ -31,9 +31,9 @@ activation:
   zh-CN:
 effect:
   en: |-
-    Once per Duel, you can use 1 of the following Skills.
-    ● If you successfully Normal Summon "Lord of D.", add 1 "The Flute of Summoning Dragon" from your Deck or GY to your hand.
-    ● Reveal "The Flute of Summoning Dragon" from your hand, then add 1 "Lord of D." from your Deck or GY to your hand.
+    Once per Duel, during your Main Phase, you can use 1 of the following Skills.
+    ● If you control "Lord of D.", add 1 "The Flute of Summoning Dragon" from your Deck or GY to your hand.
+    ● Reveal 1 "The Flute of Summoning Dragon" from your hand, then add 1 "Lord of D." from your Deck or GY to your hand.
   de: |-
     Einmal pro Duell kannst du 1 der folgenden Fähigkeiten verwerden.
     ● Falls du erfolgreich "Herr der Drachen" als Normalbeschwörung beschwörst, füge deiner Hand 1 "Drachenrufflöte" von deinem Deck oder Friedhof inzu.
@@ -67,24 +67,39 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-EN???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   de:
   - set_number: SS02-DEAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-DE???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   fr:
   - set_number: SS02-FRAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-FR???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   it:
   - set_number: SS02-ITAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-IT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   pt:
   - set_number: SS02-PTAS3
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP6-PT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
 yugipedia_page_id: 585515
