--- a/data/tcg-speed-skill/yugipedia625638.yaml
+++ b/data/tcg-speed-skill/yugipedia625638.yaml
@@ -28,8 +28,7 @@ activation:
   zh-CN:
 effect:
   en: |-
-    If you control "The Legendary Fisherman", you can activate "Umi" directly from your Deck or GY. This Skill can only be used once per Duel.
-    Once per turn, when "The Legendary Fisherman" you control destroys a monster by battle or inflicts battle damage to your opponent, you can Special Summon 1 Level 4 or lower WATER monster from your Deck or GY in Defense Position.
+    Once per Duel, if you control "The Legendary Fisherman", you can activate "Umi" directly from your Deck or GY. Once per turn, at the end of your Battle Phase, if "The Legendary Fisherman" you control destroyed a monster by by battle or inflicted battle damage to your opponent this turn, you can Special Summon 1 Level 4 or lower WATER monster from your Deck or GY in Defense Position.
   de: |-
     Falls du "Legendärer Fischer" kontrollierst, kannst du "Umi" direkt von deinem Deck oder Friedhof aktivieren. Diese Fähigkeit kann nur einmal pro Duell verwendet werden.
     Einmal pro Spielzug, wenn "Legendärer Fischer", den du kontrollierst, ein Monster durch Kampf zerstört oder deinem Gegner Kampfschaden zufügt, kannst du 1 WASSER Monster der Stufe 4 oder niedriger als Spezialbeschwörung von deinem Deck oder Friedhof in die Verteidigungsposition beschwören.
@@ -58,24 +57,39 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP6-EN???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   de:
   - set_number: SBAD-DES03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP6-DE???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   fr:
   - set_number: SBAD-FRS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP6-FR???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   it:
   - set_number: SBAD-ITS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP6-IT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   pt:
   - set_number: SBAD-PTS03
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Super Rare
+  - set_number: STP6-PT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
 yugipedia_page_id: 625638
