--- a/data/tcg-speed-skill/yugipedia716048.yaml
+++ b/data/tcg-speed-skill/yugipedia716048.yaml
@@ -28,7 +28,7 @@ activation:
   zh-CN:
 effect:
   en: |-
-    Once per turn, when your monster inflicts battle damage to your opponent, destroy 1 Spell/Trap on the field.
+    Once per turn, at the end of your Battle Phase, if a monster you control inflicted battle damage to your opponent this turn, you can destroy 1 Spell/Trap on the field.
   de: |-
     Einmal pro Spielzug, wenn dein Monster deinem Gegner Kampfschaden zufügt, zerstöre 1 Zauber/Falle auf dem Spielfeld.
   es:
@@ -49,19 +49,35 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-EN???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   de:
   - set_number: SBCB-DES11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-DE???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   fr:
   - set_number: SBCB-FRS11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-FR???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
   it:
   - set_number: SBCB-ITS11
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP6-IT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
+  pt:
+  - set_number: STP6-PT???
+    set_name: Speed Duel Tournament Pack 6
+    rarities:
 yugipedia_page_id: 716048
