--- a/data/cards/67906797.yaml
+++ b/data/cards/67906797.yaml
@@ -44,9 +44,17 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN215
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: DABL-DE080
     set_name: Darkwing Blast
+    rarities:
+    - Common
+  - set_number: MP23-DE215
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   fr:
@@ -54,14 +62,26 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR215
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: DABL-IT080
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT215
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: DABL-PT080
     set_name: Darkwing Blast
+    rarities:
+    - Common
+  - set_number: MP23-PT215
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   ja:
