--- a/data/cards/69895264.yaml
+++ b/data/cards/69895264.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN234
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE022
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE234
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR022
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR234
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT022
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT234
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT022
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT234
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP022
     set_name: 'Deck Build Pack: Tactical Masters'
