--- a/data/cards/88106656.yaml
+++ b/data/cards/88106656.yaml
@@ -53,7 +53,7 @@ sets:
   - set_number: MP23-EN112
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
-    - Rare
+    - Common
   de:
   - set_number: DIFO-DE087
     set_name: Dimension Force
@@ -62,7 +62,7 @@ sets:
   - set_number: MP23-DE112
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
-    - Rare
+    - Common
   fr:
   - set_number: DIFO-FR087
     set_name: Dimension Force
@@ -71,7 +71,7 @@ sets:
   - set_number: MP23-FR112
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
-    - Rare
+    - Common
   it:
   - set_number: DIFO-IT087
     set_name: Dimension Force
@@ -80,7 +80,7 @@ sets:
   - set_number: MP23-IT112
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
-    - Rare
+    - Common
   pt:
   - set_number: DIFO-PT087
     set_name: Dimension Force
@@ -89,7 +89,7 @@ sets:
   - set_number: MP23-PT112
     set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
-    - Rare
+    - Common
   ja:
   - set_number: WPP3-JP022
     set_name: World Premiere Pack 2022
