--- a/data/cards/00002511.yaml
+++ b/data/cards/00002511.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN232
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE020
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE232
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR020
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR232
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT020
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT232
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT020
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT232
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP020
     set_name: 'Deck Build Pack: Tactical Masters'
