--- a/data/cards/02347656.yaml
+++ b/data/cards/02347656.yaml
@@ -55,30 +55,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-EN226
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: TAMA-DE014
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-DE226
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: TAMA-FR014
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-FR226
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: TAMA-IT014
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-IT226
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: TAMA-PT014
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-PT226
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBTM-JP014
     set_name: 'Deck Build Pack: Tactical Masters'
