--- a/data/cards/05380979.yaml
+++ b/data/cards/05380979.yaml
@@ -52,6 +52,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-EN235
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: TAMA-DE023
     set_name: Tactical Masters
@@ -62,6 +66,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-DE235
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: TAMA-FR023
     set_name: Tactical Masters
@@ -72,6 +80,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-FR235
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: TAMA-IT023
     set_name: Tactical Masters
@@ -82,6 +94,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-IT235
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: TAMA-PT023
     set_name: Tactical Masters
@@ -92,6 +108,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-PT235
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBTM-JP023
     set_name: 'Deck Build Pack: Tactical Masters'
