--- a/data/cards/23965033.yaml
+++ b/data/cards/23965033.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN223
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE097
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE223
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR097
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR223
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT097
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT223
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT097
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT223
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP034
     set_name: 'Duelist Pack: Duelists of Pyroxene'
