--- a/data/cards/30748475.yaml
+++ b/data/cards/30748475.yaml
@@ -42,26 +42,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN217
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: DABL-DE084
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE217
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: DABL-FR084
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR217
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: DABL-IT084
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT217
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: DABL-PT084
     set_name: Darkwing Blast
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT217
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
