--- a/data/cards/32785578.yaml
+++ b/data/cards/32785578.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN236
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE024
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE236
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR024
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR236
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT024
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT236
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT024
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT236
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP024
     set_name: 'Deck Build Pack: Tactical Masters'
