--- a/data/cards/33407125.yaml
+++ b/data/cards/33407125.yaml
@@ -61,30 +61,50 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: MP23-EN233
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: TAMA-DE021
     set_name: Tactical Masters
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: MP23-DE233
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: TAMA-FR021
     set_name: Tactical Masters
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: MP23-FR233
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: TAMA-IT021
     set_name: Tactical Masters
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: MP23-IT233
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: TAMA-PT021
     set_name: Tactical Masters
     rarities:
     - Super Rare
     - Collector's Rare
+  - set_number: MP23-PT233
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBTM-JP021
     set_name: 'Deck Build Pack: Tactical Masters'
