--- a/data/cards/37629703.yaml
+++ b/data/cards/37629703.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN230
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE018
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE230
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR018
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR230
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT018
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT230
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT018
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT230
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP018
     set_name: 'Deck Build Pack: Tactical Masters'
