--- a/data/cards/40460013.yaml
+++ b/data/cards/40460013.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN216
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE082
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE216
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR082
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR216
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT082
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT216
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT082
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT216
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
