--- a/data/cards/48745395.yaml
+++ b/data/cards/48745395.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN227
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE015
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE227
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR015
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR227
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT015
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT227
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT015
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT227
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP015
     set_name: 'Deck Build Pack: Tactical Masters'
