--- a/data/cards/50486289.yaml
+++ b/data/cards/50486289.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN221
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE095
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE221
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR095
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR221
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT095
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT221
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT095
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT221
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP032
     set_name: 'Duelist Pack: Duelists of Pyroxene'
