--- a/data/cards/57511992.yaml
+++ b/data/cards/57511992.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN218
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE092
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE218
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR092
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR218
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT092
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT218
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT092
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT218
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VJMP-JP209
     set_name: V Jump January 2022 promotional card
