--- a/data/cards/59353647.yaml
+++ b/data/cards/59353647.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN224
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: DABL-DE098
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE224
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: DABL-FR098
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR224
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: DABL-IT098
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT224
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: DABL-PT098
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT224
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DP27-JP035
     set_name: 'Duelist Pack: Duelists of Pyroxene'
