--- a/data/cards/68038375.yaml
+++ b/data/cards/68038375.yaml
@@ -48,9 +48,17 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN212
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: DABL-DE077
     set_name: Darkwing Blast
+    rarities:
+    - Common
+  - set_number: MP23-DE212
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   fr:
@@ -58,14 +66,26 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR212
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: DABL-IT077
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT212
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: DABL-PT077
     set_name: Darkwing Blast
+    rarities:
+    - Common
+  - set_number: MP23-PT212
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   ja:
