--- a/data/cards/74018812.yaml
+++ b/data/cards/74018812.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN231
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE019
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE231
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR019
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR231
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT019
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT231
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT019
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT231
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP019
     set_name: 'Deck Build Pack: Tactical Masters'
