--- a/data/cards/94423983.yaml
+++ b/data/cards/94423983.yaml
@@ -47,26 +47,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  - set_number: MP23-EN213
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: DABL-DE078
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  - set_number: MP23-DE213
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: DABL-FR078
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  - set_number: MP23-FR213
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: DABL-IT078
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  - set_number: MP23-IT213
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: DABL-PT078
     set_name: Darkwing Blast
     rarities:
     - Super Rare
+  - set_number: MP23-PT213
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DABL-JP078
     set_name: Darkwing Blast
