--- a/data/cards/97870394.yaml
+++ b/data/cards/97870394.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-EN222
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DABL-DE096
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-DE222
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DABL-FR096
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-FR222
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DABL-IT096
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-IT222
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DABL-PT096
     set_name: Darkwing Blast
     rarities:
     - Common
+  - set_number: MP23-PT222
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP27-JP033
     set_name: 'Duelist Pack: Duelists of Pyroxene'
