--- a/data/cards/05352328.yaml
+++ b/data/cards/05352328.yaml
@@ -55,30 +55,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-EN255
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE016
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-DE255
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR016
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-FR255
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret RareV
   it:
   - set_number: GRCR-IT016
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-IT255
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT016
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-PT255
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP016
     set_name: 'Deck Build Pack: Grand Creators'
