--- a/data/cards/13764602.yaml
+++ b/data/cards/13764602.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Super Rare
+  - set_number: MP23-EN276
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: PHRA-DE058
     set_name: Phantom Rage
     rarities:
     - Super Rare
+  - set_number: MP23-DE276
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: PHRA-FR058
     set_name: Phantom Rage
     rarities:
     - Super Rare
+  - set_number: MP23-FR276
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: PHRA-IT058
     set_name: Phantom Rage
     rarities:
     - Super Rare
+  - set_number: MP23-IT276
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: PHRA-PT058
     set_name: Phantom Rage
     rarities:
     - Super Rare
+  - set_number: MP23-PT276
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: PHRA-JP058
     set_name: Phantom Rage
