--- a/data/cards/20618850.yaml
+++ b/data/cards/20618850.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN247
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAMA-DE035
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE247
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAMA-FR035
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR247
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAMA-IT035
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT247
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TAMA-PT035
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT247
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBTM-JP035
     set_name: 'Deck Build Pack: Tactical Masters'
