--- a/data/cards/30430448.yaml
+++ b/data/cards/30430448.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN245
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAMA-DE033
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE245
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAMA-FR033
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR245
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAMA-IT033
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT245
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TAMA-PT033
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT245
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBTM-JP033
     set_name: 'Deck Build Pack: Tactical Masters'
