--- a/data/cards/38745520.yaml
+++ b/data/cards/38745520.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN271
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: GRCR-DE032
     set_name: The Grand Creators
@@ -59,6 +63,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE271
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: GRCR-FR032
     set_name: The Grand Creators
@@ -68,6 +76,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR271
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: GRCR-IT032
     set_name: The Grand Creators
@@ -77,6 +89,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT271
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: GRCR-PT032
     set_name: The Grand Creators
@@ -86,6 +102,10 @@ sets:
     set_name: Magnificent Mavens
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT271
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBGC-JP032
     set_name: 'Deck Build Pack: Grand Creators'
