--- a/data/cards/41524885.yaml
+++ b/data/cards/41524885.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN259
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: GRCR-DE020
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE259
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: GRCR-FR020
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR259
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: GRCR-IT020
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT259
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: GRCR-PT020
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT259
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: DBGC-JP020
     set_name: 'Deck Build Pack: Grand Creators'
