--- a/data/cards/64018647.yaml
+++ b/data/cards/64018647.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN273
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: GRCR-DE036
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE273
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: GRCR-FR036
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR273
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: GRCR-IT036
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT273
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: GRCR-PT036
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT273
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBGC-JP036
     set_name: 'Deck Build Pack: Grand Creators'
