--- a/data/cards/65952776.yaml
+++ b/data/cards/65952776.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN269
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: GRCR-DE030
     set_name: The Grand Creators
@@ -60,6 +64,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE269
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: GRCR-FR030
     set_name: The Grand Creators
@@ -69,6 +77,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR269
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: GRCR-IT030
     set_name: The Grand Creators
@@ -78,6 +90,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT269
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: GRCR-PT030
     set_name: The Grand Creators
@@ -87,6 +103,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT269
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBGC-JP030
     set_name: 'Deck Build Pack: Grand Creators'
