--- a/data/cards/77891946.yaml
+++ b/data/cards/77891946.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN263
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: GRCR-DE024
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE263
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: GRCR-FR024
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR263
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: GRCR-IT024
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT263
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: GRCR-PT024
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT263
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBGC-JP024
     set_name: 'Deck Build Pack: Grand Creators'
