--- a/data/cards/92341815.yaml
+++ b/data/cards/92341815.yaml
@@ -50,6 +50,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN270
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: GRCR-DE031
     set_name: The Grand Creators
@@ -59,6 +63,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE270
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: GRCR-FR031
     set_name: The Grand Creators
@@ -68,6 +76,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR270
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: GRCR-IT031
     set_name: The Grand Creators
@@ -77,6 +89,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT270
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: GRCR-PT031
     set_name: The Grand Creators
@@ -86,6 +102,10 @@ sets:
     set_name: 'Battles of Legend: Monstrous Revenge'
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT270
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBGC-JP031
     set_name: 'Deck Build Pack: Grand Creators'
