--- a/data/cards/92536468.yaml
+++ b/data/cards/92536468.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MP23-EN277
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: DOCS-DE098
     set_name: Dimension of Chaos
@@ -85,6 +89,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MP23-DE277
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: DOCS-FR098
     set_name: Dimension of Chaos
@@ -94,6 +102,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MP23-FR277
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: DOCS-IT098
     set_name: Dimension of Chaos
@@ -103,6 +115,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MP23-IT277
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: DOCS-PT098
     set_name: Dimension of Chaos
@@ -112,6 +128,10 @@ sets:
     set_name: 2016 Mega-Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: MP23-PT277
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: VB17-JP001
     set_name: The Valuable Book 17 promotional cards
