--- a/data/cards/92868896.yaml
+++ b/data/cards/92868896.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP23-EN274
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: CYHO-DE016
     set_name: Cybernetic Horizon
@@ -61,6 +65,10 @@ sets:
     - Super Rare
   - set_number: MP19-DE087
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: MP23-DE274
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   fr:
@@ -72,6 +80,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP23-FR274
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: CYHO-IT016
     set_name: Cybernetic Horizon
@@ -81,6 +93,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Common
+  - set_number: MP23-IT274
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: CYHO-PT016
     set_name: Cybernetic Horizon
@@ -88,6 +104,10 @@ sets:
     - Super Rare
   - set_number: MP19-PT087
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
+    rarities:
+    - Common
+  - set_number: MP23-PT274
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   ja:
