--- a/data/cards/98287529.yaml
+++ b/data/cards/98287529.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: OTS Tournament Pack 15
     rarities:
     - Common
+  - set_number: MP23-EN278
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: SHVI-DE044
     set_name: Shining Victories
@@ -62,6 +66,10 @@ sets:
     - Super Rare
   - set_number: OP15-DE021
     set_name: OTS Tournament Pack 15
+    rarities:
+    - Common
+  - set_number: MP23-DE278
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   fr:
@@ -73,6 +81,10 @@ sets:
     set_name: OTS Tournament Pack 15
     rarities:
     - Common
+  - set_number: MP23-FR278
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: SHVI-IT044
     set_name: Shining Victories
@@ -82,6 +94,10 @@ sets:
     set_name: OTS Tournament Pack 15
     rarities:
     - Common
+  - set_number: MP23-IT278
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: SHVI-PT044
     set_name: Shining Victories
@@ -89,6 +105,10 @@ sets:
     - Super Rare
   - set_number: OP15-PT021
     set_name: OTS Tournament Pack 15
+    rarities:
+    - Common
+  - set_number: MP23-PT278
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   ja:
