--- a/data/cards/02563463.yaml
+++ b/data/cards/02563463.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN267
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE028
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE267
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR028
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR267
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT028
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT267
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT028
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT267
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP028
     set_name: 'Deck Build Pack: Grand Creators'
