--- a/data/cards/03285551.yaml
+++ b/data/cards/03285551.yaml
@@ -52,6 +52,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-EN264
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE025
     set_name: The Grand Creators
@@ -63,6 +67,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-DE264
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR025
     set_name: The Grand Creators
@@ -74,6 +82,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-FR264
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT025
     set_name: The Grand Creators
@@ -85,6 +97,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-IT264
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT025
     set_name: The Grand Creators
@@ -96,6 +112,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-PT264
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP025
     set_name: 'Deck Build Pack: Grand Creators'
