--- a/data/cards/04408198.yaml
+++ b/data/cards/04408198.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-EN261
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: GRCR-DE022
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-DE261
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: GRCR-FR022
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-FR261
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: GRCR-IT022
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-IT261
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   pt:
   - set_number: GRCR-PT022
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-PT261
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBGC-JP022
     set_name: 'Deck Build Pack: Grand Creators'
