--- a/data/cards/05530780.yaml
+++ b/data/cards/05530780.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN258
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: GRCR-DE019
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE258
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: GRCR-FR019
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR258
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: GRCR-IT019
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT258
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: GRCR-PT019
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT258
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: DBGC-JP019
     set_name: 'Deck Build Pack: Grand Creators'
