--- a/data/cards/16474916.yaml
+++ b/data/cards/16474916.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN252
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE013
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE252
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR013
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR252
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT013
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT252
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT013
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT252
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP013
     set_name: 'Deck Build Pack: Grand Creators'
