--- a/data/cards/28373620.yaml
+++ b/data/cards/28373620.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN251
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: TAMA-DE039
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE251
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: TAMA-FR039
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR251
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: TAMA-IT039
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT251
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: TAMA-PT039
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT251
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: DBTM-JP039
     set_name: 'Deck Build Pack: Tactical Masters'
