--- a/data/cards/29595202.yaml
+++ b/data/cards/29595202.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN240
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAMA-DE028
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE240
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAMA-FR028
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR240
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAMA-IT028
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT240
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TAMA-PT028
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT240
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBTM-JP028
     set_name: 'Deck Build Pack: Tactical Masters'
