--- a/data/cards/30680659.yaml
+++ b/data/cards/30680659.yaml
@@ -60,6 +60,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-EN265
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE026
     set_name: The Grand Creators
@@ -75,6 +79,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-DE265
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR026
     set_name: The Grand Creators
@@ -90,6 +98,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-FR265
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT026
     set_name: The Grand Creators
@@ -105,6 +117,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-IT265
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT026
     set_name: The Grand Creators
@@ -120,6 +136,10 @@ sets:
     rarities:
     - Secret Rare
     - Quarter Century Secret Rare
+  - set_number: MP23-PT265
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP026
     set_name: 'Deck Build Pack: Grand Creators'
