--- a/data/cards/30802207.yaml
+++ b/data/cards/30802207.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-EN262
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: GRCR-DE023
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-DE262
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: GRCR-FR023
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-FR262
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: GRCR-IT023
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-IT262
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   pt:
   - set_number: GRCR-PT023
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-PT262
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: DBGC-JP023
     set_name: 'Deck Build Pack: Grand Creators'
