--- a/data/cards/31562086.yaml
+++ b/data/cards/31562086.yaml
@@ -71,30 +71,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-EN241
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: TAMA-DE029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-DE241
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: TAMA-FR029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-FR241
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: TAMA-IT029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-IT241
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: TAMA-PT029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-PT241
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBTM-JP029
     set_name: 'Deck Build Pack: Tactical Masters'
