--- a/data/cards/42472002.yaml
+++ b/data/cards/42472002.yaml
@@ -62,6 +62,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Rare
+  - set_number: MP23-EN275
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: CYHO-DE088
     set_name: Cybernetic Horizon
@@ -71,6 +75,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Rare
+  - set_number: MP23-DE275
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: CYHO-FR088
     set_name: Cybernetic Horizon
@@ -80,6 +88,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Rare
+  - set_number: MP23-FR275
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: CYHO-IT088
     set_name: Cybernetic Horizon
@@ -89,6 +101,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Rare
+  - set_number: MP23-IT275
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: CYHO-PT088
     set_name: Cybernetic Horizon
@@ -98,6 +114,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Rare
+  - set_number: MP23-PT275
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: EP19-JP047
     set_name: Extra Pack 2019
