--- a/data/cards/42741437.yaml
+++ b/data/cards/42741437.yaml
@@ -65,30 +65,50 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-EN256
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE017
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-DE256
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR017
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-FR256
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT017
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-IT256
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT017
     set_name: The Grand Creators
     rarities:
     - Ultra Rare
     - Collector's Rare
+  - set_number: MP23-PT256
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP017
     set_name: 'Deck Build Pack: Grand Creators'
