--- a/data/cards/43863925.yaml
+++ b/data/cards/43863925.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN253
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE014
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE253
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR014
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR253
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT014
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT253
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT014
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT253
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP014
     set_name: 'Deck Build Pack: Grand Creators'
