--- a/data/cards/49221191.yaml
+++ b/data/cards/49221191.yaml
@@ -66,6 +66,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: MP23-EN279
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   de:
   - set_number: ABYR-DE039
     set_name: Abyss Rising
@@ -77,6 +81,10 @@ sets:
     set_name: Yu-Gi-Oh! Advent Calendar ZEXAL Edition
     rarities:
     - Super Rare
+  - set_number: MP23-DE279
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   fr:
   - set_number: ABYR-FR039
     set_name: Abyss Rising
@@ -84,6 +92,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: MP23-FR279
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   it:
   - set_number: ABYR-IT039
     set_name: Abyss Rising
@@ -91,6 +103,15 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Ghost Rare
+  - set_number: MP23-IT279
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
+  pt:
+  - set_number: MP23-PT279
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Super Rare
   ja:
   - set_number: ABYR-JP039
     set_name: Abyss Rising
