--- a/data/cards/55990317.yaml
+++ b/data/cards/55990317.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: MP23-EN249
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: TAMA-DE037
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: MP23-DE249
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: TAMA-FR037
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: MP23-FR249
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: TAMA-IT037
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: MP23-IT249
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: TAMA-PT037
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+  - set_number: MP23-PT249
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBTM-JP037
     set_name: 'Deck Build Pack: Tactical Masters'
