--- a/data/cards/66078354.yaml
+++ b/data/cards/66078354.yaml
@@ -50,26 +50,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-EN266
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE027
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-DE266
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR027
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-FR266
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT027
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-IT266
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT027
     set_name: The Grand Creators
     rarities:
     - Super Rare
+  - set_number: MP23-PT266
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP027
     set_name: 'Deck Build Pack: Grand Creators'
