--- a/data/cards/66712905.yaml
+++ b/data/cards/66712905.yaml
@@ -74,6 +74,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Super Rare
+  - set_number: MP23-EN244
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE032
     set_name: Tactical Masters
@@ -83,6 +87,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Super Rare
+  - set_number: MP23-DE244
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR032
     set_name: Tactical Masters
@@ -92,6 +100,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Super Rare
+  - set_number: MP23-FR244
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT032
     set_name: Tactical Masters
@@ -101,6 +113,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Super Rare
+  - set_number: MP23-IT244
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT032
     set_name: Tactical Masters
@@ -110,6 +126,10 @@ sets:
     set_name: OTS Tournament Pack 22
     rarities:
     - Super Rare
+  - set_number: MP23-PT244
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP032
     set_name: 'Deck Build Pack: Tactical Masters'
