--- a/data/cards/67835547.yaml
+++ b/data/cards/67835547.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN246
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAMA-DE034
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE246
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAMA-FR034
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR246
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAMA-IT034
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT246
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TAMA-PT034
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT246
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBTM-JP034
     set_name: 'Deck Build Pack: Tactical Masters'
