--- a/data/cards/78135071.yaml
+++ b/data/cards/78135071.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-EN257
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: GRCR-DE018
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-DE257
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: GRCR-FR018
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-FR257
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: GRCR-IT018
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-IT257
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: GRCR-PT018
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-PT257
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBGC-JP018
     set_name: 'Deck Build Pack: Grand Creators'
