--- a/data/cards/79858629.yaml
+++ b/data/cards/79858629.yaml
@@ -54,26 +54,46 @@ sets:
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-EN254
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   de:
   - set_number: GRCR-DE015
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-DE254
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   fr:
   - set_number: GRCR-FR015
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-FR254
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   it:
   - set_number: GRCR-IT015
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-IT254
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   pt:
   - set_number: GRCR-PT015
     set_name: The Grand Creators
     rarities:
     - Rare
+  - set_number: MP23-PT254
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Prismatic Secret Rare
   ja:
   - set_number: DBGC-JP015
     set_name: 'Deck Build Pack: Grand Creators'
