--- a/data/cards/83293307.yaml
+++ b/data/cards/83293307.yaml
@@ -56,9 +56,17 @@ sets:
     set_name: Circuit Break
     rarities:
     - Common
+  - set_number: MP23-EN280
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: CIBR-DE019
     set_name: Circuit Break
+    rarities:
+    - Common
+  - set_number: MP23-DE280
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   fr:
@@ -66,14 +74,26 @@ sets:
     set_name: Circuit Break
     rarities:
     - Common
+  - set_number: MP23-FR280
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: CIBR-IT019
     set_name: Circuit Break
     rarities:
     - Common
+  - set_number: MP23-IT280
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: CIBR-PT019
     set_name: Circuit Break
+    rarities:
+    - Common
+  - set_number: MP23-PT280
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
     rarities:
     - Common
   ja:
