--- a/data/cards/92385016.yaml
+++ b/data/cards/92385016.yaml
@@ -60,26 +60,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN250
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   de:
   - set_number: TAMA-DE038
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE250
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   fr:
   - set_number: TAMA-FR038
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR250
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   it:
   - set_number: TAMA-IT038
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT250
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   pt:
   - set_number: TAMA-PT038
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT250
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Rare
   ja:
   - set_number: DBTM-JP038
     set_name: 'Deck Build Pack: Tactical Masters'
