--- a/data/cards/93229151.yaml
+++ b/data/cards/93229151.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-EN248
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   de:
   - set_number: TAMA-DE036
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-DE248
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   fr:
   - set_number: TAMA-FR036
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-FR248
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   it:
   - set_number: TAMA-IT036
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-IT248
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   pt:
   - set_number: TAMA-PT036
     set_name: Tactical Masters
     rarities:
     - Rare
+  - set_number: MP23-PT248
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Common
   ja:
   - set_number: DBTM-JP036
     set_name: 'Deck Build Pack: Tactical Masters'
