--- a/data/cards/94445733.yaml
+++ b/data/cards/94445733.yaml
@@ -70,26 +70,46 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-EN243
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: TAMA-DE031
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-DE243
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: TAMA-FR031
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-FR243
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: TAMA-IT031
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-IT243
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: TAMA-PT031
     set_name: Tactical Masters
     rarities:
     - Super Rare
+  - set_number: MP23-PT243
+    set_name: '25th Anniversary Tin: Dueling Heroes Mega Pack'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBTM-JP031
     set_name: 'Deck Build Pack: Tactical Masters'
