--- a/data/cards/83293307.yaml
+++ b/data/cards/83293307.yaml
@@ -18,6 +18,7 @@ text:
     FLIP: You can add 1 "Krawler" monster from your Deck to your hand.
     If this face-up card in its owner's control leaves the field because of an opponent's card effect: You can Special Summon 2 "Krawler" monsters with different names from your Deck in face-down Defense Position, except "Krawler Receptor". You can only use each effect of "Krawler Receptor" once per turn.
   de: |-
+    (Diese Karte wird nicht als „Rezept“-Karte behandelt.)
     FLIPP: Du kannst deiner Hand 1 „Krawler“-Monster von deinem Deck hinzufügen.
     Falls diese offene Karte, die ihr Besitzer kontrolliert, das Spielfeld durch einen Karteneffekt eines Gegners verlässt: Du kannst 2 „Krawler“-Monster mit unterschiedlichen Namen als Spezialbeschwörung von deinem Deck in die verdeckte Verteidigungsposition beschwören, außer „Krawler Rezeptor“. Du kannst jeden Effekt von „Krawler Rezeptor“ nur einmal pro Spielzug verwenden.
   es: |-
