--- a/data/cards/92536468.yaml
+++ b/data/cards/92536468.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Wenn du Effektschaden erhältst (außer während des Damage Steps): Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören und falls du dies tust, erhältst du LP in Höhe des Schadens, den du erhalten hast. Du erhältst keinen Effektschaden.
   es: |-
-    Cuando recibes daño de efecto (excepto durante el Damage Step): puedes Invocar esta carta de Modo Especial desde tu mano y, si lo haces, gana LP iguales a la cantidad de daño que recibiste.
+    Cuando recibes daño de efecto (excepto durante el Damage Step): puedes Invocar esta carta de Modo Especial desde tu mano y, si lo haces, gana LP iguales a la cantidad de daño que recibiste. No recibes daño de efecto.
   fr: |-
     Lorsque vous recevez des dommages d'effet (sauf durant la Damage Step) : vous pouvez Invoquer Spécialement cette carte depuis votre main, et si vous le faites, gagnez des LP égaux aux dommages que vous avez reçus. Vous ne recevez aucun dommage d'effet.
   it: |-
