--- a/data/cards/15635751.yaml
+++ b/data/cards/15635751.yaml
@@ -2,11 +2,11 @@ konami_id:
 password: 15635751
 name:
   en: Camelot, Realm of Noble Knights and Noble Arms
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Camelot, wo ein Edler Ritter und Edle Waffen verweilen
+  es: Camelot, Reino de Noble Caballero y Armas Nobles
+  fr: Camelot, Royaume du Chevalier Noble et des Armes Nobles
+  it: Camelot, Reame dei Nobili Cavalieri e delle Nobili Armi
+  pt: Camelot, Reino dos Nobre Cavaleiros e Armas Nobres
   ja:
   ja_romaji:
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Once per turn, if a "Noble Knight" card(s) you control would be destroyed by battle or card effect, you can destroy 1 Equip Card you control instead. During your Main Phase: You can banish this card (until the next Standby Phase), and if you do, place 1 "Noble Knights of the Round Table" from your hand, Deck, or GY, face-up in your Field Zone, then you can Special Summon 1 "Artorigus" monster, or add to your hand 1 "Noble Arms" card, from your Deck or GY. You can only use this effect of "Camelot, Realm of Noble Knights and Noble Arms" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Einmal pro Spielzug, falls eine oder mehr „Edler Ritter“-Karten, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du stattdessen 1 Ausrüstungskarte zerstören, die du kontrollierst. Während deiner Main Phase: Du kannst diese Karte (bis zur nächsten Standby Phase) verbannen und falls du dies tust, lege 1 „Edler Ritter der Tafelrunde“ von deiner Hand, deinem Deck oder deinem Friedhof offen in deine Spielfeldzone, dann kannst du 1 „Artorigus“-Monster als Spezialbeschwörung von deinem Deck oder Friedhof beschwören oder deiner Hand 1 „Edle Waffen“-Karte von deinem Deck oder Friedhof hinzufügen. Du kannst diesen Effekt von „Camelot, wo ein Edler Ritter und Edle Waffen verweilen“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Una vez por turno, si una o más cartas "Noble Caballero" que controlas fueran a ser destruidas en batalla o por el efecto de una carta, puedes destruir 1 Carta de Equipo que controles en su lugar. Durante tu Main Phase: puedes desterrar esta carta (hasta la próxima Standby Phase) y, si lo haces, pon boca arriba en tu Zona del Campo 1 "Noble Caballero de la Mesa Redonda" en tu mano, Deck o Cementerio, y después puedes Invocar de Modo Especial 1 monstruo "Artorigus" o añadir a tu mano 1 carta "Armas Nobles" en tu Deck o Cementerio. Sólo puedes usar este efecto de "Camelot, Reino de Noble Caballero y Armas Nobles" una vez por turno.
+  fr: |-
+    Une fois par tour, si une ou plusieurs cartes "Chevalier Noble" que vous contrôlez vont être détruites au combat ou par un effet de carte, vous pouvez détruire 1 Carte d'Équipement que vous contrôlez à la place. Durant votre Main Phase : vous pouvez bannir cette carte (jusqu'à la prochaine Standby Phase), et si vous le faites, placez 1 "Table Ronde du Chevalier Noble" depuis votre main, Deck ou Cimetière, face recto dans votre Zone Terrain, puis vous pouvez Invoquer Spécialement 1 monstre "Artorigus" ou ajouter à votre main 1 carte "Armes Nobles", depuis votre Deck ou Cimetière. Vous ne pouvez utiliser cet effet de "Camelot, Royaume du Chevalier Noble et des Armes Nobles" qu'une fois par tour.
+  it: |-
+    Una volta per turno, se una o più carte "Nobile Cavaliere" che controlli stanno per essere distrutte in battaglia o dall'effetto di una carta, puoi invece distruggere 1 Carta Equipaggiamento che controlli. Durante la tua Main Phase: puoi bandire questa carta (fino alla prossima Standby Phase) e, se lo fai, metti 1 "Nobili Cavalieri della Tavola Rotonda" dalla tua mano, Deck o Cimitero scoperto nella tua Zona Terreno, poi puoi Evocare Specialmente 1 mostro "Artorigus", o aggiungere alla tua mano 1 carta "Nobili Armi", dal tuo Deck o Cimitero. Puoi utilizzare questo effetto di "Camelot, Reame dei Nobili Cavalieri e delle Nobili Armi" una sola volta per turno.
+  pt: |-
+    Uma vez por turno, se um ou mais cards "Nobre Cavaleiro" que você controla seriam destruídos em batalha ou por um efeito de card, em vez disso, você pode destruir 1 Card de Equipamento que você controla. Durante sua Fase Principal: você pode banir este card (até a próxima Fase de Apoio) e, se isso acontecer, coloque 1 "Nobre Cavaleiros da Távola Redonda" da sua mão, do Deck ou do Cemitério, com a face para cima na sua Zona do Campo e, depois, você pode Invocar por Invocação-Especial 1 monstro "Artorigus", ou adicione à sua mão 1 card "Armas Nobres", do seu Deck ou Cemitério. Você só pode usar este efeito de "Camelot, Reino dos Nobre Cavaleiros e Armas Nobres" uma vez por turno.
   ja:
   ko:
   zh-TW:
