--- a/data/cards/42620460.yaml
+++ b/data/cards/42620460.yaml
@@ -2,11 +2,11 @@ konami_id:
 password: 42620460
 name:
   en: Time Thief Power Reserve
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Zeitdieb Gangreserve
+  es: Ladrón del Tiempo Reserva de Marcha
+  fr: Réserve de Marche des Voleurs de Temps
+  it: Riserva di Energia Ladro del Tempo
+  pt: Reserva de Poder do Ladrão do Tempo
   ja:
   ja_romaji:
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Special Summon this card as a Normal Monster (Psychic/DARK/Level 4/ATK 1900/DEF 2500) (this card is also still a Trap), then you can Special Summon 1 Machine "Time Thief" monster from your hand, Deck, or GY. If you control an Xyz Monster(s) that has both a Spell and a Trap as material: You can banish this card from your GY; banish 1 card on the field. You can only use each effect of "Time Thief Power Reserve" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Beschwöre diese Karte als Spezialbeschwörung als Normales Monster (Psi/FINSTERNIS/Stufe 4/ATK 1900/DEF 2500) (diese Karte ist zusätzlich weiterhin eine Falle), dann kannst du 1 „Zeitdieb“-Maschine-Monster als Spezialbeschwörung von deiner Hand, deinem Deck oder deinem Friedhof beschwören. Falls du ein oder mehr Xyz-Monster kontrollierst, die sowohl einen Zauber als auch eine Falle als Material haben: Du kannst diese Karte von deinem Friedhof verbannen; verbanne 1 Karte auf dem Spielfeld. Du kannst jeden Effekt von „Zeitdieb Gangreserve“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Invoca esta carta de Modo Especial como un Monstruo Normal (Psíquico/OSCURIDAD/Nivel 4/ATK 1900/DEF 2500) (esta carta también sigue siendo una Trampa), y después puedes Invocar de Modo Especial 1 monstruo "Ladrón del Tiempo" Máquina desde tu mano, Deck o Cementerio. Si controlas uno o más Monstruos Xyz que tengan como material una o más Mágicas y una o más Trampas: puedes desterrar esta carta en tu Cementerio; destierra 1 carta en el Campo. Sólo puedes usar cada efecto de "Ladrón del Tiempo Reserva de Marcha" una vez por turno.
+  fr: |-
+    Invoquez Spécialement cette carte comme un Monstre Normal (Psychique/TÉNÈBRES/Niveau 4/ATK 1900/DEF 2500) (cette carte est toujours aussi un Piège), puis vous pouvez Invoquer Spécialement 1 monstre "Voleurs de Temps" Machine depuis votre main, Deck ou Cimetière. Si vous contrôlez un ou plusieurs Monstres Xyz qui ont une Magie ainsi qu'un Piège comme Matériel : vous pouvez bannir cette carte depuis votre Cimetière ; bannissez 1 carte sur le Terrain. Vous ne pouvez utiliser chaque effet de "Réserve de Marche des Voleurs de Temps" qu'une fois par tour.
+  it: |-
+    Evoca Specialmente questa carta come Mostro Normale (Psichico/OSCURITÀ/Livello 4/ATK 1900/DEF 2500) (questa carta è ancora anche una Trappola), poi puoi Evocare Specialmente 1 mostro "Ladro del Tempo" Macchina dalla tua mano, Deck o Cimitero. Se controlli uno o più Mostri Xyz che hanno sia una Magia che una Trappola come materiale: puoi bandire questa carta dal tuo Cimitero; bandisci 1 carta sul Terreno. Puoi utilizzare ogni effetto di "Riserva di Energia Ladro del Tempo" una sola volta per turno.
+  pt: |-
+    Invoque este card por Invocação-Especial como um Monstro Normal (Psíquico/TREVAS/Nível 4/ATK 1900/DEF 2500) (este card ainda é considerado uma Armadilha) e, depois, você pode Invocar por Invocação-Especial 1 monstro "Ladrão do Tempo" Máquina da sua mão, do Deck ou do Cemitério. Se você controlar um ou mais Monstros Xyz que tenham tanto Magias quanto Armadilhas como matéria: você pode banir este card do seu Cemitério; bana 1 card no campo. Você só pode usar cada efeito de "Reserva de Poder do Ladrão do Tempo" uma vez por turno.
   ja:
   ko:
   zh-TW:
