--- a/data/cards/58419204.yaml
+++ b/data/cards/58419204.yaml
@@ -8,7 +8,7 @@ name:
   it: Istinto di Sopravvivenza
   pt: Instinto de Sobrevivência
   ja: <ruby>生<rt>せい</rt></ruby><ruby>存<rt>ぞん</rt></ruby><ruby>本<rt>ほん</rt></ruby><ruby>能<rt>のう</rt></ruby>
-  ja_romaji: Seizon Honnō
+  ja_romaji: Seizonhonnō
   ko: 생존본능
   ko_rr:
   zh-TW:
