--- a/data/cards/61705417.yaml
+++ b/data/cards/61705417.yaml
@@ -8,7 +8,7 @@ name:
   it: Predatore delle Tombe
   pt: Ladrão de Túmulos
   ja: <ruby>墓<rt>はか</rt></ruby><ruby>荒<rt>あ</rt></ruby>らし
-  ja_romaji: Haka Arashi
+  ja_romaji: Hakaarashi
   ko: 도굴꾼
   ko_rr:
   zh-TW:
