--- a/data/rush/yugipedia1008684.yaml
+++ b/data/rush/yugipedia1008684.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分のデッキの一番上のカードを墓地へ送る。その後、自分の墓地の「オリジン・オブ・レジェンド」１体または「サンクタム・オブ・レジェンド」１枚を選んで手札に加える事ができる。
   ko:
   zh-TW:
   zh-CN:
